# quanta-oracle

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE.md  pyproject.toml  quanta-oracle.spec  quanta_oracle.spec
.claude/agents/: code-reviewer.md  test-writer.md
.claude/commands/: commit.md  help.md  progress.md  refactor.md  review.md  security-check.md  test-plan.md  worktree.md
.claude/hooks/: block-secrets.py  lint-on-save.sh
.claude/skills/code-review/: SKILL.md
.github/workflows/: ci.yml  release.yml
build_oracle/: __init__.py  arima.py  cli.py  ensemble.py  neural.py  streaming.py  var.py
build_oracle/gui/: app.py
docs/: ENTERPRISE-READINESS.md
docs/brand/: README.md
quanta_oracle/: __init__.py  arima.py  autodiff.py  changepoint.py  cli.py  decompose.py  ensemble.py  features.py  metrics.py  neural.py  prophet.py  streaming.py  var.py
quanta_oracle/gui/: __init__.py  app.py
quanta_oracle/gui/pages/: changepoint_page.py  dashboard.py  decompose_page.py  forecast_page.py  settings_page.py
tests/: test_arima.py  test_changepoint.py  test_decompose.py  test_ensemble.py  test_metrics.py  test_multivariate.py  test_neural.py  test_persistence.py  test_streaming.py
