[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quanta-oracle"
version = "1.0.0"
description = "Time series forecasting and anomaly detection — ARIMA, Prophet-style, neural nets, changepoint detection"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    { name = "Zain Dana Harper" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
quanta-oracle = "quanta_oracle.cli:main"

[project.optional-dependencies]
gui = ["PyQt6>=6.5,<7"]
all = ["pandas>=2.0,<3", "scikit-learn>=1.3,<2", "matplotlib>=3.7,<4", "PyQt6>=6.5,<7"]

[tool.setuptools.packages.find]
include = ["quanta_oracle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
